force-app/main/default/objects/Investment__c/fields/CurrentValueRefreshDate__c.field-meta.xml
<CustomField>
    <fullName>CurrentValueRefreshDate__c</fullName>
    <label>Current Value Refresh Date</label>
    <type>Date</type>
</CustomField>