force-app/main/default/objects/Investment__c/fields/CurrentValueUnit__c.field-meta.xml
<CustomField>
    <fullName>CurrentValueUnit__c</fullName>
    <label>Current Value (Unit)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>