force-app/main/default/objects/Investment__c/fields/PurchaseDate__c.field-meta.xml
<CustomField>
    <fullName>PurchaseDate__c</fullName>
    <label>Purchase Date</label>
    <type>Date</type>
</CustomField>