force-app/main/default/objects/Investment__c/fields/Return__c.field-meta.xml
<CustomField>
    <fullName>Return__c</fullName>
    <formula>CurrentValue__c - PurchasePrice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Return</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>