force-app/main/default/objects/Investment__c/fields/ReturnPCT__c.field-meta.xml
<CustomField>
    <fullName>ReturnPCT__c</fullName>
    <formula>CurrentValue__c / PurchasePrice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Return %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>