force-app/main/default/objects/Investment__c/fields/SoldDate__c.field-meta.xml
<CustomField>
    <fullName>SoldDate__c</fullName>
    <label>Sold Date</label>
    <type>Date</type>
</CustomField>