force-app/main/default/objects/Investment__c/fields/TickerSymbol__c.field-meta.xml
<CustomField>
    <fullName>TickerSymbol__c</fullName>
    <label>Ticker Symbol</label>
    <length>80</length>
    <type>Text</type>
</CustomField>