force-app/main/default/objects/Investment__c/fields/UnitPurchasePrice__c.field-meta.xml
<CustomField>
    <fullName>UnitPurchasePrice__c</fullName>
    <label>Purchase Price (Unit)</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>