force-app/main/default/objects/Investment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>PurchaseDate__c</columns>
    <columns>PurchasePrice__c</columns>
    <columns>CurrentValue__c</columns>
    <columns>Return__c</columns>
    <columns>ReturnPCT__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>